<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constr_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDigit1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/img_40dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin_2"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_digit1"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/btnDigit2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDigit2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/img_40dp"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_digit2"
                android:textAllCaps="false"
                android:layout_marginStart="@dimen/padding_10"
                android:layout_marginEnd="@dimen/padding_10"
                app:layout_constraintEnd_toStartOf="@+id/btnDigit3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnDigit1"
                app:layout_constraintTop_toTopOf="@+id/btnDigit1" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDigit3"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/img_40dp"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_digit3"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnDigit2"
                app:layout_constraintTop_toTopOf="@+id/btnDigit2" />


        </androidx.constraintlayout.widget.ConstraintLayout>



    <com.sreedwish.cybazeapp.utils.NonSwipeableViewPager
        android:id="@+id/frm"
        android:layout_width="match_parent"
        android:layout_height="210dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_10"
        android:layout_marginTop="@dimen/padding_10">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="#fff"
            style="@style/main_title_recycler_16sp_semi_bold"
            android:text="@string/lbl_count"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCount"
            style="@style/main_title_recycler_16sp_semi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_4"
            android:text="0"
            android:textColor="#fff" />



        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:layout_marginStart="80dp"
            style="@style/main_title_recycler_16sp_semi_bold"
            android:text="@string/hint_amount"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAmount"
            style="@style/main_title_recycler_16sp_semi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_4"
            android:text="0"
            android:textColor="#fff" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp"
        android:clipToPadding="false"
        android:background="@color/bg_grey_dark"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/bg_grey">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        android:background="#fff"
        android:padding="@dimen/padding_16">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/main_title_recycler_16sp_semi_bold"
            android:text="@string/lbl_total"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotal"
            style="@style/main_title_recycler_16sp_semi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_4"
            android:text="0" />


        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/padding_2"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="@dimen/btn_long"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/btn_save"
            android:textSize="18sp" />

    </LinearLayout>


    </FrameLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>